--- a/app/page.module.css
+++ b/app/page.module.css
@@ -36,8 +36,9 @@
   cursor: pointer;
 }
 
-.button:hover {
-  background-color: #0056b3;
+.button:disabled {
+  background-color: grey;
+  cursor: not-allowed;
 }
 
 .error {
